--- a/.github/workflows/password-tool.yml
+++ b/.github/workflows/password-tool.yml
@@ -31,53 +31,13 @@ jobs:
          name: scripts
       - name: Install wazuh
         run: |
-         sudo bash wazuh-install.sh -a
-      - name: Uncompress wazuh install files 
-        run: sudo tar -xvf wazuh-install-files.tar
-      - name: Change indexer password, password no provided
-        run: |
-          echo 'admin_pass<<EOF' >> $GITHUB_ENV
-          sudo bash wazuh-passwords-tool.sh -u admin | awk '{ print $NF }' | sed \$d | sed '1d' >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
-      - name: Change indexer password, password no provided
-        run:  |
-          if ! curl -XGET https://localhost:9200/ -u admin:${{ env.admin_pass }} -k -w %{http_code} | grep "200"; then
-            exit 1
-          fi
-      - name: Check change indexer password, password provided
-        run: |
-         sudo bash wazuh-passwords-tool.sh -u admin -p LN*X1v.VNtCZ5sESEtLfijPAd39LXGAI
-         if ! curl -XGET https://localhost:9200/ -u admin:LN*X1v.VNtCZ5sESEtLfijPAd39LXGAI -k -w %{http_code} | grep "200"; then
-            exit 1
-          fi
-  test-password-tool-2:
-    runs-on: ubuntu-latest
-    needs: Build-password-tool-and-wazuh-install-scripts
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v3
-        with:
-         name: scripts
-      - name: Install wazuh
-        run: |
           sudo bash wazuh-install.sh -a
       - name: Uncompress wazuh install files 
         run: sudo tar -xvf wazuh-install-files.tar
-      - name: Get wazuh API password
-        run: |
-          echo 'apiPass<<EOF' >> $GITHUB_ENV
-          sudo cat wazuh-install-files/wazuh-passwords.txt | awk "/username: 'wazuh'/{getline;print;}" | awk '{ print $2 }' >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
-      - name: Change single API user
-        run: |  
-          sudo bash wazuh-passwords-tool.sh -au wazuh -ap ${{ env.apiPass }} -u wazuh -p BkJt92r*ndzN.CkCYWn?d7i5Z7EaUt63 -A 
-          if ! curl -w "%{http_code}" -u wazuh:BkJt92r*ndzN.CkCYWn?d7i5Z7EaUt63 -k -X GET "https://localhost:55000/security/user/authenticate" | grep "200"; then
-            exit 1
-          fi
       - name: Run script
         run: sudo bash .github/actions/passwords-tool/script.sh
           
-  test-password-tool-3:
+  test-password-tool-2:
       runs-on: ubuntu-latest
       needs: Build-password-tool-and-wazuh-install-scripts
       steps:
@@ -94,17 +54,10 @@ jobs:
           run: |
             echo 'apiPass<<EOF' >> $GITHUB_ENV
             sudo cat wazuh-install-files/wazuh-passwords.txt | awk "/username: 'wazuh'/{getline;print;}" | awk '{ print $2 }' >> $GITHUB_ENV
+            echo 'EOF' >> $GITHUB_ENV 
+            echo 'adminPass<<EOF' >> $GITHUB_ENV
+            sudo cat wazuh-install-files/wazuh-passwords.txt | awk "/username: 'admin'/{getline;print;}" | awk '{ print $2 }' >> $GITHUB_ENV
             echo 'EOF' >> $GITHUB_ENV  
-        - name: Change all passwords using API credentials
-          run:  |
-            echo 'api_pass<<EOF' >> $GITHUB_ENV
-            sudo bash wazuh-passwords-tool.sh -a -au wazuh -ap ${{ env.apiPass }} | grep "Wazuh API user wazuh is" | awk '{ print $NF }' >> $GITHUB_ENV
-            echo 'EOF' >> $GITHUB_ENV
-        - name: Check change all passwords using API credentials
-          run:  |
-            if ! curl -w "%{http_code}" -u wazuh:${{ env.api_pass }} -k -X GET "https://localhost:55000/security/user/authenticate" | grep "200"; then
-             exit 1
-            fi  
         - name: Errors expected
           run:  |
             if ! sudo bash wazuh-passwords-tool.sh -u wazuuuh | grep "ERROR"; then
@@ -113,6 +66,12 @@ jobs:
               exit 1 
             elif ! sudo bash wazuh-passwords-tool.sh -au wazuh -ap ${{ env.apiPass }} -u wazuh -p password -A | grep "ERROR"; then
               exit 1
-            elif ! curl -u wazuh:BkJt92r*ndzN.CkCYWn?d7i5Z7EaUt63 -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
+            elif ! curl -u wazuh:wazuh -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
              exit 1
+            elif ! curl -u wazuuh:${{ env.apiPass }} -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
+             exit 1
+            elif ! curl -XGET https://localhost:9200/ -u admin:admin -k | grep "Unauthorized"; then
+             exit
+            elif ! curl -XGET https://localhost:9200/ -u adminnnn:${{ env.adminPass }} -k | grep "Unauthorized"; then
+             exit
             fi
