Update password-tool.yml and tests-stack.sh

--- a/.github/workflows/password-tool.yml
+++ b/.github/workflows/password-tool.yml
@@ -21,7 +21,7 @@ jobs:
             unattended_installer/wazuh-install.sh
             unattended_installer/wazuh-passwords-tool.sh
           if-no-files-found: error 
-  test-password-tool-1:
+  test-password-tool-succeed:
     runs-on: ubuntu-latest
     needs: Build-password-tool-and-wazuh-install-scripts
     steps:
@@ -35,9 +35,9 @@ jobs:
       - name: Uncompress wazuh install files 
         run: sudo tar -xvf wazuh-install-files.tar
       - name: Run script
-        run: sudo bash .github/actions/passwords-tool/script.sh
+        run: sudo bash .github/actions/passwords-tool/tests-stack.sh
           
-  test-password-tool-2:
+  test-password-tool-failed:
       runs-on: ubuntu-latest
       needs: Build-password-tool-and-wazuh-install-scripts
       steps:
@@ -66,12 +66,12 @@ jobs:
               exit 1 
             elif ! sudo bash wazuh-passwords-tool.sh -au wazuh -ap ${{ env.apiPass }} -u wazuh -p password -A | grep "ERROR"; then
               exit 1
-            elif ! curl -u wazuh:wazuh -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
+            elif ! curl -s -u wazuh:wazuh -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
              exit 1
-            elif ! curl -u wazuuh:${{ env.apiPass }} -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
+            elif ! curl -s -u wazuuh:${{ env.apiPass }} -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
              exit 1
-            elif ! curl -XGET https://localhost:9200/ -u admin:admin -k | grep "Unauthorized"; then
+            elif ! curl -s -XGET https://localhost:9200/ -u admin:admin -k | grep "Unauthorized"; then
              exit
-            elif ! curl -XGET https://localhost:9200/ -u adminnnn:${{ env.adminPass }} -k | grep "Unauthorized"; then
+            elif ! curl -s -XGET https://localhost:9200/ -u adminnnn:${{ env.adminPass }} -k | grep "Unauthorized"; then
              exit
             fi
