--- a/.github/workflows/password-tool.yml
+++ b/.github/workflows/password-tool.yml
@@ -21,7 +21,7 @@ jobs:
             unattended_installer/wazuh-install.sh
             unattended_installer/wazuh-passwords-tool.sh
           if-no-files-found: error 
-  test-password-tool-succeed:
+  test-password-tool-success:
     runs-on: ubuntu-latest
     needs: Build-password-tool-and-wazuh-install-scripts
     steps:
@@ -35,43 +35,20 @@ jobs:
       - name: Uncompress wazuh install files 
         run: sudo tar -xvf wazuh-install-files.tar
       - name: Run script
-        run: sudo bash .github/actions/passwords-tool/tests-stack.sh
+        run: sudo bash .github/actions/passwords-tool/tests-stack-success.sh
           
-  test-password-tool-failed:
-      runs-on: ubuntu-latest
-      needs: Build-password-tool-and-wazuh-install-scripts
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/download-artifact@v3
-          with:
-           name: scripts
-        - name: Install wazuh
-          run: |
-           sudo bash wazuh-install.sh -a
-        - name: Uncompress wazuh install files 
-          run: sudo tar -xvf wazuh-install-files.tar
-        - name: Get wazuh API password
-          run: |
-            echo 'apiPass<<EOF' >> $GITHUB_ENV
-            sudo cat wazuh-install-files/wazuh-passwords.txt | awk "/username: 'wazuh'/{getline;print;}" | awk '{ print $2 }' >> $GITHUB_ENV
-            echo 'EOF' >> $GITHUB_ENV 
-            echo 'adminPass<<EOF' >> $GITHUB_ENV
-            sudo cat wazuh-install-files/wazuh-passwords.txt | awk "/username: 'admin'/{getline;print;}" | awk '{ print $2 }' >> $GITHUB_ENV
-            echo 'EOF' >> $GITHUB_ENV  
-        - name: Errors expected
-          run:  |
-            if ! sudo bash wazuh-passwords-tool.sh -u wazuuuh | grep "ERROR"; then
-              exit 1
-            elif ! sudo bash wazuh-passwords-tool.sh -u wazuh_user -p password | grep "ERROR"; then
-              exit 1 
-            elif ! sudo bash wazuh-passwords-tool.sh -au wazuh -ap ${{ env.apiPass }} -u wazuh -p password -A | grep "ERROR"; then
-              exit 1
-            elif ! curl -s -u wazuh:wazuh -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
-             exit 1
-            elif ! curl -s -u wazuuh:${{ env.apiPass }} -k -X GET "https://localhost:55000/security/user/authenticate" | grep "Invalid credentials"; then
-             exit 1
-            elif ! curl -s -XGET https://localhost:9200/ -u admin:admin -k | grep "Unauthorized"; then
-             exit
-            elif ! curl -s -XGET https://localhost:9200/ -u adminnnn:${{ env.adminPass }} -k | grep "Unauthorized"; then
-             exit
-            fi
+  test-password-tool-failure:
+    runs-on: ubuntu-latest
+    needs: Build-password-tool-and-wazuh-install-scripts
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v3
+        with:
+         name: scripts
+      - name: Install wazuh
+        run: |
+          sudo bash wazuh-install.sh -a
+      - name: Uncompress wazuh install files 
+        run: sudo tar -xvf wazuh-install-files.tar
+      - name: Run script
+        run: sudo bash .github/actions/passwords-tool/tests-stack-failure.sh
