--- a/unattended_installer/config/dashboard/dashboard_all_in_one.yml
+++ b/unattended_installer/config/dashboard/dashboard_all_in_one.yml
@@ -12,3 +12,4 @@ server.ssl.key: "/etc/wazuh-dashboard/certs/kibana-key.pem"
 server.ssl.certificate: "/etc/wazuh-dashboard/certs/kibana.pem"
 opensearch.ssl.certificateAuthorities: ["/etc/wazuh-dashboard/certs/root-ca.pem"]
 uiSettings.overrides.defaultRoute: /app/wazuh
+opensearch_security.cookie.secure: true
