--- a/unattended_installer/config/indexer/indexer_unattended_distributed.yml
+++ b/unattended_installer/config/indexer/indexer_unattended_distributed.yml
@@ -22,8 +22,8 @@ plugins.security.ssl.transport.resolve_hostname: false
 plugins.security.ssl.http.enabled_ciphers:
   - "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256"
   - "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384"
-  - "TLS_ECDHE_ECDSA_WITH_AES_128_ GCM_SHA256"
-  - "TLS_ECDHE_ECDSA_WITH_AES_256_ GCM_SHA384"
+  - "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256"
+  - "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384"
 plugins.security.ssl.http.enabled_protocols:
   - "TLSv1.2"
 plugins.security.authcz.admin_dn:
