--- a/.github/workflows/password-tool.yml
+++ b/.github/workflows/password-tool.yml
@@ -6,13 +6,15 @@ on:
 
 jobs:
   Build-password-tool-and-wazuh-install-scripts:
-   runs-on: ubuntu-latest
-   steps:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
       - name: Build password-tool and wazuh-install scripts
         working-directory: ./unattended_installer
         run: |
-          bash builder.sh -p -i
+          bash builder.sh -p
+          bash builder.sh -i -d
+          sed -i 's/pre-release/staging/g' wazuh-install.sh
         shell: bash 
       - uses: actions/upload-artifact@v3
         with:
@@ -21,6 +23,7 @@ jobs:
             unattended_installer/wazuh-install.sh
             unattended_installer/wazuh-passwords-tool.sh
           if-no-files-found: error 
+          
   test-password-tool-success:
     runs-on: ubuntu-latest
     needs: Build-password-tool-and-wazuh-install-scripts
@@ -28,7 +31,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v3
         with:
-         name: scripts
+          name: scripts
       - name: Install wazuh
         run: |
           sudo bash wazuh-install.sh -a
@@ -44,7 +47,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v3
         with:
-         name: scripts
+          name: scripts
       - name: Install wazuh
         run: |
           sudo bash wazuh-install.sh -a
