--- a/stack/dashboard/deb/debian/rules
+++ b/stack/dashboard/deb/debian/rules
@@ -52,11 +52,7 @@ override_dh_auto_install:
 # -----------------------------------------------------------------------------
 
 override_dh_install:
-	if [ "$(BASE)" = "s3" ]; then \
-		curl -kOL https://packages-dev.wazuh.com/stack/dashboard/base/$(DASHBOARD_FILE) ;\
-	else \
-		cp /root/output/$(DASHBOARD_FILE) ./ ;\
-	fi
+	cp /opt/$(DASHBOARD_FILE) ./ ;\
 
 
 	groupadd $(GROUP)
