--- a/alpine/docker/x86_64/Dockerfile
+++ b/alpine/docker/x86_64/Dockerfile
@@ -3,9 +3,7 @@ FROM amd64/alpine:3.16.0
 # Install all the necessary tools to build the packages
 RUN apk add ca-certificates curl alpine-sdk sudo less openssh \
     openssl openssl-dev libgcc bash make gcc g++ cmake automake \
-    linux-headers autoconf libtool python3 aws-cli jq && \
-    ln -s /usr/include/linux/a.out.h /usr/include/a.out.h && \
-    addgroup -S wazuh && adduser -S wazuh -G wazuh && \
+    linux-headers autoconf libtool python3 aws-cli jq gettext-dev procps && \
     mkdir /var/local/wazuh && mkdir /wazuh
 
 # Add the scripts to build the Alpine package
