--- a/stack/dashboard/deb/debian/rules
+++ b/stack/dashboard/deb/debian/rules
@@ -26,10 +26,10 @@ export DH_OPTIONS
 
 export TARGET_DIR=${CURDIR}/debian/wazuh-dashboard
 export NAME=wazuh-dashboard
-export CONFIG_DIR=/etc/${NAME}
+export CONFIG_DIR=/etc/$(NAME)
 export INSTALLATION_DIR=$(INSTALLATION_DIR)
-export USER=${NAME}
-export GROUP=${NAME}
+export USER=$(NAME)
+export GROUP=$(NAME)
 export DASHBOARD_FILE=wazuh-dashboard-base-$(VERSION)-$(REVISION)-linux-x64.tar.xz
 
 # -----------------------------------------------------------------------------
@@ -54,7 +54,6 @@ override_dh_auto_install:
 override_dh_install:
 	cp /tmp/$(DASHBOARD_FILE) ./
 
-
 	groupadd $(GROUP)
 	useradd -g $(GROUP) $(USER)
 
@@ -75,22 +74,15 @@ override_dh_install:
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/services/wazuh-dashboard $(TARGET_DIR)/etc/systemd/system/$(NAME)
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/services/default $(TARGET_DIR)/etc/default/$(NAME)
 
-	chmod 644 $(TARGET_DIR)/etc/systemd/system/$(NAME)
-	chmod 644 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard.service
-	chmod 644 $(TARGET_DIR)/etc/default/$(NAME)
-
 	rm -rf $(TARGET_DIR)$(INSTALLATION_DIR)/etc
 
 	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(INSTALLATION_DIR)
 	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(CONFIG_DIR)
-	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard.service
-	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/systemd/system/$(NAME)
-	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/default/$(NAME)
 
 	if [ "$(VERSION)" = "99.99.0" ]; then \
 		runuser $(USER) --shell="/bin/bash" --command="$(TARGET_DIR)$(INSTALLATION_DIR)/bin/opensearch-dashboards-plugin install https://packages-dev.wazuh.com/futures/ui/dashboard/wazuh-99.99.0-$(REVISION).zip" ;\
 	else \
-		runuser $(USER) --shell="/bin/bash" --command="$(TARGET_DIR)$(INSTALLATION_DIR)/bin/opensearch-dashboards-plugin install https://packages-dev.wazuh.com/pre-release/ui/dashboard/wazuh-$(VERSION)-${REVISION}.zip" ;\
+		runuser $(USER) --shell="/bin/bash" --command="$(TARGET_DIR)$(INSTALLATION_DIR)/bin/opensearch-dashboards-plugin install https://packages-dev.wazuh.com/pre-release/ui/dashboard/wazuh-$(VERSION)-$(REVISION).zip" ;\
 	fi
 
 	find $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/wazuh/ -exec chown $(USER):$(GROUP) {} \;
@@ -99,11 +91,14 @@ override_dh_install:
 
 override_dh_fixperms:
 
-	chown -R "$(NAME)":"$(NAME)" "$(TARGET_DIR)$(CONFIG_DIR)"
-	chown -R "$(NAME)":"$(NAME)" "$(TARGET_DIR)$(INSTALLATION_DIR)"
-	chown -R "$(NAME)":"$(NAME)" $(TARGET_DIR)/etc/default/"$(NAME)"
-	chown -R "$(NAME)":"$(NAME)" $(TARGET_DIR)/etc/systemd/system/"$(NAME)"
-	chown $(NAME):$(NAME) $(TARGET_DIR)$(INSTALLATION_DIR)/VERSION
+	chmod 750 $(TARGET_DIR)$(CONFIG_DIR)
+	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(CONFIG_DIR)
+	chmod 750 $(TARGET_DIR)$(INSTALLATION_DIR)
+	chown -R $(USER):$(GROUP) $(TARGET_DIR)$(INSTALLATION_DIR)
+	chown root:root $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard.service
+	chown root:root $(TARGET_DIR)/etc/systemd/system/"$(NAME)"
+	chown $(USER):$(GROUP) $(TARGET_DIR)/etc/default/"$(NAME)"
+	chown $(USER):$(GROUP) $(TARGET_DIR)$(INSTALLATION_DIR)/VERSION
 	chmod 440 $(TARGET_DIR)$(INSTALLATION_DIR)/VERSION
 	chmod 750 $(TARGET_DIR)/etc/systemd/system/wazuh-dashboard
 	chmod 750 $(TARGET_DIR)/etc/default/wazuh-dashboard
@@ -113,6 +108,7 @@ override_dh_fixperms:
 	find "$(TARGET_DIR)$(INSTALLATION_DIR)" -type d -exec chmod 750 {} \;
 	find "$(TARGET_DIR)$(INSTALLATION_DIR)" -type f -perm 644 -exec chmod 640 {} \;
 	find "$(TARGET_DIR)$(INSTALLATION_DIR)" -type f -perm 755 -exec chmod 750 {} \;
+	find "$(TARGET_DIR)$(INSTALLATION_DIR)" -type f -perm 744 -exec chmod 740 {} \;
 
 # -----------------------------------------------------------------------------
 
