--- a/documentation-templates/wazuh/config.yml
+++ b/documentation-templates/wazuh/config.yml
@@ -9,8 +9,8 @@ nodes:
     #  ip: <indexer-node-ip>
 
   # Wazuh server nodes
-  # If there is more than one Wazuh server 
-  # node each one must have a node_type
+  # If there is more than one Wazuh server
+  # node, each one must have a node_type
   server:
     - name: wazuh-1
       ip: <wazuh-manager-ip>
@@ -21,7 +21,6 @@ nodes:
     #- name: wazuh-3
     #  ip: <wazuh-manager-ip>
     #  node_type: worker
-
 
   # Wazuh dashboard nodes
   dashboard:
