--- a/alpine/docker/armhf/Dockerfile
+++ b/alpine/docker/armhf/Dockerfile
@@ -1,7 +1,7 @@
-FROM arm32v7/alpine:3.16.0
+FROM arm32v6/alpine:3.13.0
 
 # Install all the necessary tools to build the packages
-RUN apk add ca-certificates curl alpine-sdk sudo less openssh \
+RUN linux32 apk add ca-certificates curl alpine-sdk sudo less openssh \
     openssl openssl-dev libgcc bash make gcc g++ cmake automake \
     linux-headers autoconf libtool python3 aws-cli jq gettext-dev procps && \
     mkdir /var/local/wazuh && mkdir /wazuh
