--- a/stack/dashboard/rpm/docker/x86_64/Dockerfile
+++ b/stack/dashboard/rpm/docker/x86_64/Dockerfile
@@ -1,12 +1,11 @@
-FROM centos:7
+FROM rockylinux:9
 
 # Install all the necessary tools to build the packages
 RUN yum clean all && yum update -y
 RUN yum install -y openssh-clients sudo gnupg \
     yum-utils epel-release redhat-rpm-config rpm-devel \
     zlib zlib-devel rpm-build autoconf automake \
-    glibc-devel libtool perl
-    
+    glibc-devel libtool perl 
 
 # Add the scripts to build the RPM package
 ADD builder.sh /usr/local/bin/builder
