Rename configuration nodes

--- a/documentation-templates/wazuh/config.yml
+++ b/documentation-templates/wazuh/config.yml
@@ -1,24 +1,24 @@
 nodes:
   # Wazuh indexer nodes
   indexer:
-    - name: node-1
+    - name: indexer-1
       ip: <indexer-node-ip>
-    #- name: node-2
+    #- name: indexer-2
     #  ip: <indexer-node-ip>
-    #- name: node-3
+    #- name: indexer-3
     #  ip: <indexer-node-ip>
 
   # Wazuh server nodes
   # If there is more than one Wazuh server
   # node, each one must have a node_type
   server:
-    - name: wazuh-1
+    - name: server-1
       ip: <wazuh-manager-ip>
     #  node_type: master
-    #- name: wazuh-2
+    #- name: server-2
     #  ip: <wazuh-manager-ip>
     #  node_type: worker
-    #- name: wazuh-3
+    #- name: server-3
     #  ip: <wazuh-manager-ip>
     #  node_type: worker
 
