--- a/alpine/SPECS/wazuh-agent/APKBUILD
+++ b/alpine/SPECS/wazuh-agent/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="Wazuh helps you to gain security visibility into your infrastructure."
 url="https://www.wazuh.com/"
 arch="${architecture}"
 license="GPL"
-depends="bash busybox procps"
+depends="busybox procps"
 makedepends="make cmake git openssl-dev libgcc gcc automake autoconf libtool"
 checkdepends=""
 install="${pkgname}.pre-install ${pkgname}.post-install ${pkgname}.pre-upgrade ${pkgname}.post-upgrade ${pkgname}.pre-deinstall ${pkgname}.post-deinstall"
