--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -26,5 +26,5 @@ jobs:
         run: |
           ./build_package.sh
           mv ./output/wazuh-indexer_4.5.0-1_amd64.deb ~/wazuh-indexer_4.5.0-1_amd64.deb
-      - name: Run script
+      - name: Run script to compare checksums
         run: sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh
