--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -10,14 +10,10 @@ jobs:
   Test-debian-indexer-upgrade:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Download wazuh-indexer 4.3 package
+      - uses: wei/wget@v1
         with:
-          ref: 4.3
-      - name: Build wazuh-indexer 4.3 package
-        working-directory: ./stack/indexer/deb
-        run: |
-          ./build_package.sh
-          mv ./output/wazuh-indexer_4.3.10-1_amd64.deb ~/wazuh-indexer_4.3.10-1_amd64.deb
+          args: https://packages-dev.wazuh.com/staging/apt/pool/main/w/wazuh-indexer/wazuh-indexer_4.3.7-0.40320.20220825_amd64.deb
       - uses: actions/checkout@v3
         with:
           ref: 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
